tests/explicit-nulls/pos/nullable-unit/A.java
import javax.annotation.Nullable;

public abstract class A<T> {
    public abstract @Nullable T foo();
}