tests/explicit-nulls/neg/i21629_override/J.java
package javax.annotation;
import java.util.*;

public class J {
    public String p(@Nullable String nullableString) {
        return nullableString;
    }
}
